Add zertier (#1116)
